--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,21 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 html, body {
   height: 100%;
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding: 0;
-  box-sizing: border-box;
+  overflow: auto;
 }
 
 #root{
   height: 100%;
+  overflow: scroll;
 }
